--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cupsidity": "0.0.1",
     "request": "~2.30.0",
     "nconf": "~0.6.9",
-    "winston": "~0.7.2"
+    "winston": "~0.7.2",
+    "mongoose": "~3.8.6"
   },
   "devDependencies": {},
   "scripts": {
