--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "request": "~2.30.0",
     "nconf": "~0.6.9",
     "winston": "~0.7.2",
-    "mongoose": "~3.8.6"
+    "mongoose": "~3.8.6",
+    "jade": "~1.1.5",
+    "connect-multiparty": "~1.0.3"
   },
   "devDependencies": {},
   "scripts": {
-    "start" : "coffee index.coffee",
+    "start": "coffee index.coffee",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
