Adapted Instagram watcher

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "connect-multiparty": "~1.0.3",
     "password-hash": "~1.2.1",
     "passport": "~0.2.0",
-    "passport-local": "~0.1.6"
+    "passport-local": "~0.1.6",
+    "async": "~0.2.10"
   },
   "devDependencies": {},
   "scripts": {
