--- a/public/bower.json
+++ b/public/bower.json
@@ -14,6 +14,9 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.1.0"
+    "bootstrap": "~3.1.0",
+    "underscore": "~1.6.0",
+    "backbone": "~1.1.0",
+    "jquery": "~2.1.0"
   }
 }
