--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "repository": "https://github.com/molefrog/printiculo.git",
   "description": "Real-Time printing system",
-  "main": "index.coffee",
+  "main": "server/index.coffee",
   "dependencies": {
     "express": "~3.4.7",
     "instagram-node-lib": "~0.1.1",
@@ -23,7 +23,15 @@
     "connect-redis": "~1.4.6",
     "kue": "~0.7.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "coffee-script-brunch": "~1.7.3",
+    "javascript-brunch": "~1.7.1",
+    "uglify-js-brunch": "~1.7.6",
+    "css-brunch": "~1.7.0",
+    "clean-css-brunch": "~1.7.1",
+    "stylus-brunch": "~1.8.0",
+    "auto-reload-brunch": "~1.7.1"
+  },
   "scripts": {
     "start": "coffee index.coffee",
     "test": "echo \"Error: no test specified\" && exit 1"
