--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "async": "~0.2.10",
     "redis": "~0.10.0",
     "connect-redis": "~1.4.6",
-    "kue": "~0.7.4"
+    "kue": "~0.7.4",
+    "uid": "0.0.2"
   },
   "devDependencies": {
     "coffee-script-brunch": "~1.7.3",
