--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "chaplin": "~1.0.0",
     "lodash": "~2.4.0",
     "jquery": "~2.0.2",
-    "bootstrap": "~3.1.0"
+    "bootstrap": "~3.1.0",
+    "showdown": "~0.3.1"
   },
   "overrides": {
     "backbone": {
@@ -15,6 +16,9 @@
         "jquery": "*"
       },
       "main": "backbone.js"
+    },
+    "showdown" : {
+      "main" : "compressed/showdown.js"
     }
   }
 }
