--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "connect-redis": "~1.4.6",
     "kue": "~0.7.4",
     "uid": "0.0.2",
-    "ws": "~0.4.31"
+    "ws": "~0.4.31",
+    "mongoose-multi-set": "~0.1.0"
   },
   "devDependencies": {
     "coffee-script-brunch": "~1.7.3",
