Renamed project to StevieWhale

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "printiculo",
+  "name": "steviewhale",
   "version": "0.1.0",
   "main": "public/javascripts/app.js",
   "dependencies": {
