--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "clean-css-brunch": "~1.7.1",
     "stylus-brunch": "~1.8.0",
     "auto-reload-brunch": "~1.7.1",
-    "jade-brunch": "~1.8.0"
+    "jade-brunch": "~1.8.0",
+    "forever": "^0.10.11"
   },
   "scripts": {
-    "start": "coffee index.coffee",
+    "start": "forever start -o steviewhale.log -a --pidFile steviewhale.pid -c coffee server/index.coffee",
+    "stop": "forever stop --pidFile steviewhale.pid",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
