--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "chaplin": "~1.0.0",
     "lodash": "~2.4.0",
     "jquery": "~2.0.2",
-    "showdown": "~0.3.1"
+    "showdown": "~0.3.1",
+    "animate.css": "~3.1.0"
   },
   "overrides": {
     "backbone": {
@@ -16,8 +17,8 @@
       },
       "main": "backbone.js"
     },
-    "showdown" : {
-      "main" : "compressed/showdown.js"
+    "showdown": {
+      "main": "compressed/showdown.js"
     }
   }
 }
