--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "kue": "~0.7.4",
     "uid": "0.0.2",
     "ws": "~0.4.31",
-    "mongoose-multi-set": "~0.1.0"
+    "mongoose-multi-set": "~0.1.0",
+    "q": "^1.0.0"
   },
   "devDependencies": {
     "coffee-script-brunch": "~1.7.3",
