Added date to the log

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "uid": "0.0.2",
     "ws": "~0.4.31",
     "mongoose-multi-set": "~0.1.0",
-    "q": "^1.0.0"
+    "q": "^1.0.0",
+    "moment": "~2.5.1"
   },
   "devDependencies": {
     "coffee-script-brunch": "~1.7.3",
