Switched back to jade-brunch@1.8.0 since it exposes jade variable in newer versions

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "clean-css-brunch": "~1.7.1",
     "stylus-brunch": "~1.8.0",
     "auto-reload-brunch": "~1.7.1",
-    "jade-brunch": "~1.8.0",
+    "jade-brunch": "1.8.0",
     "forever": "^0.10.11"
   },
   "scripts": {
