--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
     "stylus-brunch": "~1.8.0",
     "auto-reload-brunch": "~1.7.1",
     "jade-brunch": "1.8.0",
-    "forever": "^0.10.11"
+    "forever": "^0.10.11",
+    "mocha": "^1.18.2",
+    "should": "^3.3.1",
+    "supertest": "^0.11.0",
+    "coffee-script": "^1.7.1"
   },
   "scripts": {
     "start": "forever start -o steviewhale.log -a --pidFile steviewhale.pid -c coffee server/index.coffee --env=production",
     "stop": "forever stop --pidFile steviewhale.pid",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "env env=testing mocha -R spec --compilers coffee:coffee-script/register"
   },
   "keywords": [
     "print",
