--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "mocha": "^1.18.2",
     "should": "^3.3.1",
     "supertest": "^0.11.0",
-    "coffee-script": "^1.7.1"
+    "coffee-script": "^1.7.1",
+    "Faker": "~0.7.0"
   },
   "scripts": {
-    "build" : "bower install && brunch build --production",
+    "build": "bower install && brunch build --production",
     "start": "forever start -o steviewhale.log -a --pidFile steviewhale.pid -c coffee server/index.coffee --env=production",
     "stop": "forever stop --pidFile steviewhale.pid",
     "test": "env env=testing mocha -R spec --compilers coffee:coffee-script/register"
