--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "request": "^2.30.0",
     "nconf": "~0.6.9",
     "winston": "~0.7.2",
-    "mongoose": "~3.8.6",
+    "mongoose": "3.8.8",
     "jade": "~1.1.5",
     "connect-multiparty": "~1.0.3",
     "password-hash": "~1.2.1",
