--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,10 @@
     "lodash": "~2.4.0",
     "jquery": "~2.0.2",
     "showdown": "~0.3.1",
-    "animate.css": "~3.1.0"
+    "animate.css": "~3.1.0",
+    "masonry": "~3.1.5",
+    "moment": "~2.6.0",
+    "imagesloaded": "~3.1.5"
   },
   "overrides": {
     "backbone": {
