--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
   },
   "scripts": {
     "build": "bower install && brunch build --production",
-    "start": "forever start -o steviewhale.log -a --pidFile steviewhale.pid -c coffee server/index.coffee --env=production",
-    "stop": "forever stop --pidFile steviewhale.pid",
+    "start": "forever start -o app.log -e error.log -a -c coffee server/index.coffee --env=production",
+    "stop": "forever stop -c coffee server/index.coffee --env=production",
     "test": "env env=testing mocha -R spec --compilers coffee:coffee-script/register"
   },
   "keywords": [
