--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "should": "^3.3.1",
     "supertest": "^0.11.0",
     "coffee-script": "^1.7.1",
-    "Faker": "~0.7.0"
+    "Faker": "~0.7.0",
+    "bower": "^1.3.3"
   },
   "scripts": {
     "build": "bower install && brunch build --production",
