--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
   },
   "keywords": [
     "print",
-    "instagram"
+    "instagram",
+    "real-time",
+    "photos"
   ],
   "author": "molefrog",
   "license": "MIT"
