--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "body-parser": "^1.0.2",
     "cookie-parser": "^1.0.1",
     "express-session": "^1.0.4",
-    "st": "^0.4.1"
+    "st": "^0.4.1",
+    "knox": "^0.8.9"
   },
   "devDependencies": {
     "coffee-script-brunch": "~1.7.3",
