--- a/package.json
+++ b/package.json
@@ -5,34 +5,37 @@
   "description": "Real-Time Printing Experience",
   "main": "server/index.coffee",
   "dependencies": {
-    "express": "4.1.1",
-    "instagram-node-lib": "~0.1.1",
-    "socket.io": "~0.9.16",
-    "lodash": "~2.4.1",
-    "request": "^2.30.0",
-    "nconf": "~0.6.9",
-    "winston": "~0.7.2",
-    "mongoose": "3.8.8",
-    "jade": "~1.1.5",
+    "async": "~0.2.10",
+    "body-parser": "^1.0.2",
+    "canvas": "^1.1.3",
     "connect-multiparty": "~1.0.3",
-    "password-hash": "~1.2.1",
+    "connect-redis": "~1.4.6",
+    "cookie-parser": "^1.0.1",
+    "express": "4.1.1",
+    "express-session": "^1.0.4",
+    "instagram-node-lib": "~0.1.1",
+    "jade": "~1.1.5",
+    "knox": "^0.8.9",
+    "knox-mpu": "^0.1.6",
+    "kue": "~0.7.4",
+    "lodash": "~2.4.1",
+    "mime": "^1.2.11",
+    "moment": "~2.5.1",
+    "mongoose": "3.8.8",
+    "mongoose-multi-set": "~0.1.0",
+    "nconf": "~0.6.9",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
-    "async": "~0.2.10",
-    "redis": "~0.10.0",
-    "connect-redis": "~1.4.6",
-    "kue": "~0.7.4",
-    "uid": "0.0.2",
-    "ws": "~0.4.31",
-    "mongoose-multi-set": "~0.1.0",
+    "password-hash": "~1.2.1",
     "q": "^1.0.0",
-    "moment": "~2.5.1",
-    "twilio": "^1.6.0",
-    "body-parser": "^1.0.2",
-    "cookie-parser": "^1.0.1",
-    "express-session": "^1.0.4",
+    "redis": "~0.10.0",
+    "request": "^2.30.0",
+    "socket.io": "~0.9.16",
     "st": "^0.4.1",
-    "knox": "^0.8.9"
+    "twilio": "^1.6.0",
+    "uid": "0.0.2",
+    "winston": "~0.7.2",
+    "ws": "~0.4.31"
   },
   "devDependencies": {
     "coffee-script-brunch": "~1.7.3",
