--- a/package.json
+++ b/package.json
@@ -40,26 +40,26 @@
     "ws": "~0.4.31"
   },
   "devDependencies": {
-    "coffee-script-brunch": "~1.7.3",
-    "javascript-brunch": "~1.7.1",
-    "uglify-js-brunch": "~1.7.6",
-    "css-brunch": "~1.7.0",
-    "clean-css-brunch": "~1.7.1",
-    "stylus-brunch": "~1.8.0",
-    "auto-reload-brunch": "~1.7.1",
-    "jade-brunch": "1.8.0",
-    "forever": "^0.10.11",
-    "mocha": "^1.18.2",
-    "should": "^3.3.1",
-    "supertest": "^0.11.0",
-    "coffee-script": "^1.7.1",
     "Faker": "~0.7.0",
-    "bower": "^1.3.3"
+    "auto-reload-brunch": "~1.7.1",
+    "bower": "^1.3.3",
+    "clean-css-brunch": "~1.7.1",
+    "coffee-script": "^1.7.1",
+    "coffee-script-brunch": "~1.7.3",
+    "css-brunch": "~1.7.0",
+    "jade-brunch": "1.8.0",
+    "javascript-brunch": "~1.7.1",
+    "mocha": "^1.18.2",
+    "pm2": "^0.8.15",
+    "should": "^3.3.1",
+    "stylus-brunch": "~1.8.0",
+    "supertest": "^0.11.0",
+    "uglify-js-brunch": "~1.7.6"
   },
   "scripts": {
     "build": "bower install && brunch build --production",
-    "start": "forever start -o logs/app.log -e logs/error.log -a -c coffee server/index.coffee --env=production",
-    "stop": "forever stop -c coffee server/index.coffee --env=production",
+    "start": "pm2 start processes.json",
+    "stop": "pm2 delete processes.json",
     "test": "env env=testing mocha -R spec --compilers coffee:coffee-script/register"
   },
   "keywords": [
